<resources>
    <string name="app_name">Shifts</string>

    <!-- weekdays -->
    <string-array name="days_of_week_array">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>

    <!-- months -->
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>

    <!-- main screen -->
    <string name="title_jobs">Работы</string>
    <string name="title_schedules">Графики</string>
    <string name="title_shift_types">Смены</string>
    <string name="title_vacations">Отпуска</string>
    <string name="title_alarms">Будильники</string>
    <string name="title_settings">Настройки</string>

    <!-- jobs screen -->
    <string name="label_jobs">Работы</string>

    <!-- job dialog -->
    <string name="label_add_job">Добавить работу</string>
    <string name="label_edit_job">Редактировать работу</string>
    <string name="job_name_title">Название</string>

    <!-- schedules screen -->
    <string name="label_schedules">Графики</string>
    <string name="schedules_title">Графики</string>
    <string name="btn_add_schedule_title">Добавить график</string>

    <!-- schedule screen -->
    <string name="label_add_schedule">Добавить график</string>
    <string name="label_edit_schedule">Редактировать график</string>
    <string name="schedule_belongs_job_title">График принадлежит работе</string>
    <string name="schedule_duration_title">Продолжительность графика</string>
    <string name="schedule_type_title">Тип графика</string>
    <string name="schedule_type_regular_btn_title">Обычный</string>
    <string name="schedule_type_cyclic_btn_title">Цикличный</string>
    <string name="schedule_setup_shifts_btn_title">Задать смены</string>
    <string name="schedule_setup_cycle_btn_title">Задать цикл смен</string>
    <string name="schedule_add_shift_btn_title">Добавить смену</string>

    <!-- alarm screen -->
    <string name="alarm_belongs_job_title">Работа</string>
    <string name="alarm_belongs_schedule_title">График</string>
    <string name="alarm_belongs_shift_title">Смена</string>

    <!-- vacations screen -->
    <string name="label_vacations">Отпуска</string>
    <string name="vacations_title">Отпуска</string>
    <string name="btn_add_vacation_title">Добавить отпуск</string>

    <!-- vacation screen -->
    <string name="label_add_vacation">Добавить отпуск</string>
    <string name="label_edit_vacation">Редактировать отпуск</string>
    <string name="vacation_total_days_title">Всего дней</string>
    <string name="vacation_enter_count_hint">Введите количество</string>
    <string name="vacation_start_shift_title">Первая смена после отпуска</string>
    <string name="click_to_choose_shift_hint">Нажмите, чтобы выбрать смену</string>

    <!-- settings -->
    <string name="label_settings">Настройки</string>
    <string name="settings_group_main">Главное</string>
    <string name="settings_title_holidays">Праздники</string>
    <string name="settings_description_holidays">Подключить отображение праздников</string>
    <string name="settings_group_transfer">Перенос</string>
    <string name="settings_title_export">Экспорт записей</string>
    <string name="settings_description_export">Сохраните графики в памяти телефона</string>
    <string name="settings_title_import">Импорт записей</string>
    <string name="settings_description_import">Загрузите графики в календарь</string>
    <string name="settings_title_excel">Выгрузить в Excel</string>
    <string name="settings_description_excel">Создайте документ с графиками</string>
    <string name="settings_group_notifications">Напоминания</string>
    <string name="settings_title_vibration">Вибрация</string>
    <string name="settings_description_vibration">Вибрировать при напоминании</string>
    <string name="settings_title_melody">Мелодия напоминания</string>
    <string name="settings_description_melody">Выбрать</string>

    <!-- hints -->
    <string name="hint_item_long_click">Долгое нажатие на элемент списка откроет его меню</string>

    <!-- dialogs -->
    <string name="label_choose_job">Выбрать работу</string>
    <string name="label_choose_schedule">Выбрать график</string>
    <string name="label_choose_shift">Выбрать смену</string>
    <string name="label_choose_month">Выбрать месяц</string>
    <string name="label_choose_shift_color">Выбрать цвет смены</string>

    <!-- dialog buttons -->
    <string name="ok_button">Ок</string>
    <string name="delete_button">Удалить</string>
    <string name="cancel_button">Отмена</string>

    <!-- menu item titles -->
    <string name="menu_item_delete">Удалить</string>
    <string name="menu_item_alarm">Будильник</string>
    <string name="menu_item_statistics">Статистика</string>
    <string name="menu_item_vacations">Настроить отпуска</string>
    <string name="menu_item_archive">Архивировать</string>
    <string name="menu_item_tuning">Редактировать дни</string>
    <string name="menu_item_save">Сохранить</string>

    <!-- color picker -->
    <string name="sizzling_red">Шипящий красный</string>
    <string name="free_speech_blue">Свобода слова</string>
    <string name="spiro_disco_ball">Диско шар</string>
    <string name="jade_dust">Нефритовая пыль</string>
    <string name="green_teal">Зелёный чирок</string>
    <string name="chrome_yellow">Жёлтый хром</string>
    <string name="vibrant_yellow">Яркий жёлтый</string>
    <string name="red_orange">Красный апельсин</string>
    <string name="london_square">Лондонская площадь</string>
    <string name="black_pearl">Чёрная жемчужина</string>

    <!-- shift types screen -->
    <string name="shift_types_shifts_label">Смены</string>

    <!-- shift type screen -->
    <string name="shift_type_add_label">Добавить смену</string>
    <string name="shift_type_edit_label">Редактировать смену</string>
    <string name="shift_type_name_title">Название смены</string>
    <string name="shift_type_all_day_btn_title">Весь день</string>
    <string name="shift_type_choose_hours_btn_title">Выбрать часы</string>
    <string name="shift_type_title">Тип смены</string>
    <string name="shift_type_day_off_btn_title">Выходной день</string>
    <string name="shift_type_day_on_btn_title">Рабочий день</string>
    <string name="shift_type_duration_title">Продолжительность смены</string>
    <string name="shift_type_start_title">Начало</string>
    <string name="shift_type_finish_title">Конец</string>
    <string name="shift_type_choose_color_title">Выбрать цвет смены</string>

    <!-- splash_info screen -->
    <string name="splash_info">Генерируем календарь…</string>

    <!-- days tuning screen -->
    <string name="label_days_tuning">Редактировать дни</string>
    <string name="tuning_choose_days_title">Выбрать дни</string>
    <string name="month_year">%1$s %2$s</string>

    <!-- statistics screen -->
    <string name="label_statistics">Статистика</string>
    <string name="statistics_choose_period_title">Выбрать период</string>

    <!-- alarms screen -->
    <string name="label_alarms">Будильники</string>
    <string name="alarm_add_label">Новый будильник</string>
    <string name="alarm_edit_label">Редактировать будильник</string>

    <!-- misc -->
    <string name="empty_yet_placeholder">Здесь пока пусто</string>
    <string name="empty_state_main">Создайте график, нажав кнопку ниже</string>
    <string name="choose_placeholder">Выбрать</string>
    <string name="please_wait">Пожалуйста, подождите…</string>
    <string name="choose_job_title">Выбрать работу</string>
    <string name="choose_shift_title">Выбрать смену</string>
    <string name="choose_days_title">Выбрать дни</string>
    <string name="first_day_title">Первый день</string>
    <string name="last_day_title">Последний день</string>
    <string name="start_typing_hint">Начните писать</string>
    <string name="add_job_hint">Например: основная работа</string>

    <!-- content descriptions -->
    <string name="description_btn_add_schedule">Кнопка добавить график</string>
    <string name="description_go_today">Перейти к сегодняшнему дню</string>
    <string name="description_delete_shift_from_schedule">Кнопка удалить смену из графика</string>
    <string name="description_check_label">Метка выделенного элемента списка</string>
    <string name="description_empty_list_image">Картинка вместо пустого списка</string>
    <string name="description_btn_set_random_color">Кнопка генерации случайного цвета для смены</string>
    <string name="description_previous_month">Кнопка выбора предыдущего месяца</string>
    <string name="description_next_month">Кнопка выбора следующего месяца</string>

</resources>