<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_jobs"
        android:title="@string/title_jobs"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_schedules"
        android:title="@string/title_schedules"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_shift_types"
        android:title="@string/title_shift_types"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_vacations"
        android:title="@string/title_vacations"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_alarms"
        android:title="@string/title_alarms"
        app:showAsAction="never" />
</menu>