<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingHorizontal="@dimen/spacing_16"
    android:paddingTop="@dimen/spacing_16"
    tools:context=".ui.shifttype.ShiftTypeFragment">

    <TextView
        android:id="@+id/tv_shift_type_name_title"
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:text="@string/shift_type_name_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_shift_type_name"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_48"
        android:hint="@string/start_typing_hint"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        app:layout_constraintTop_toBottomOf="@id/tv_shift_type_name_title" />

    <TextView
        android:id="@+id/tv_shift_type_title"
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/shift_type_title"
        app:layout_constraintTop_toBottomOf="@id/et_shift_type_name" />

    <RadioGroup
        android:id="@+id/radio_group_shift_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_40"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_shift_type_title">

        <RadioButton
            android:id="@+id/btn_shift_type_day_off"
            style="@style/RadioButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/spacing_24"
            android:layout_weight="1"
            android:text="@string/shift_type_day_off_btn_title"
            tools:checked="true" />

        <RadioButton
            android:id="@+id/btn_shift_type_day_on"
            style="@style/RadioButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shift_type_day_on_btn_title"
            tools:checked="false" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_shift_type_duration_title"
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/shift_type_duration_title"
        app:layout_constraintTop_toBottomOf="@id/radio_group_shift_type" />

    <RadioGroup
        android:id="@+id/radio_group_shift_type_duration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_40"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_shift_type_duration_title">

        <RadioButton
            android:id="@+id/btn_shift_type_full_day"
            style="@style/RadioButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/spacing_24"
            android:layout_weight="1"
            android:text="@string/shift_type_all_day_btn_title"
            tools:checked="true" />

        <RadioButton
            android:id="@+id/btn_shift_type_choose_hours"
            style="@style/RadioButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/shift_type_choose_hours_btn_title"
            tools:checked="false" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_shift_type_start_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginTop="@dimen/spacing_4"
        android:layout_marginEnd="@dimen/spacing_4"
        android:gravity="start|center_vertical"
        android:text="@string/shift_type_start_title"
        android:textColor="@color/bright_gray_54"
        app:layout_constraintEnd_toStartOf="@id/tv_shift_type_finish_title"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_shift_type_duration" />

    <TextView
        android:id="@+id/tv_shift_type_finish_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginStart="@dimen/spacing_4"
        android:gravity="start|center_vertical"
        android:text="@string/shift_type_finish_title"
        android:textColor="@color/bright_gray_54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_shift_type_start_title"
        app:layout_constraintTop_toTopOf="@id/tv_shift_type_start_title" />

    <TextView
        android:id="@+id/tv_shift_type_start"
        style="@style/TextSelectable"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:layout_marginEnd="@dimen/spacing_4"
        android:gravity="center"
        android:textColor="@color/enabled_disabled_color"
        app:layout_constraintEnd_toStartOf="@id/tv_shift_type_finish"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_shift_type_start_title"
        tools:text="00:00" />

    <TextView
        android:id="@+id/tv_shift_type_finish"
        style="@style/TextSelectable"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:layout_marginStart="@dimen/spacing_4"
        android:gravity="center"
        android:textColor="@color/enabled_disabled_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_shift_type_start"
        app:layout_constraintTop_toBottomOf="@id/tv_shift_type_start_title"
        tools:text="00:00" />

    <TextView
        android:id="@+id/btn_shift_type_choose_color_title"
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/shift_type_choose_color_title"
        app:layout_constraintTop_toBottomOf="@id/tv_shift_type_start" />

    <View
        android:id="@+id/btn_shift_type_choose_color"
        android:layout_width="@dimen/button_size_40"
        android:layout_height="@dimen/button_size_40"
        android:background="@drawable/bg_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shift_type_choose_color_title"
        tools:backgroundTint="@color/chrome_yellow" />

    <ImageButton
        android:id="@+id/btn_shift_type_random_color"
        android:layout_width="@dimen/button_size_40"
        android:layout_height="@dimen/button_size_40"
        android:background="@drawable/bg_btn_round_inset"
        android:backgroundTint="@color/alabaster"
        android:contentDescription="@string/description_btn_set_random_color"
        android:src="@drawable/ic_round_autorenew_24"
        app:layout_constraintBottom_toBottomOf="@id/btn_shift_type_choose_color"
        app:layout_constraintStart_toEndOf="@id/btn_shift_type_choose_color"
        app:layout_constraintTop_toTopOf="@id/btn_shift_type_choose_color" />

</androidx.constraintlayout.widget.ConstraintLayout>