<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_statistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_16">

            <TextView
                style="@style/TitlePrimaryStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_size_24"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:text="@string/choose_job_title" />

            <TextView
                android:id="@+id/tv_statistics_job"
                style="@style/TextSelectable"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_48"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:gravity="start|center_vertical"
                android:hint="@string/choose_placeholder"
                tools:text="Моя работа" />

            <TextView
                style="@style/TitlePrimaryStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_size_24"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:text="@string/statistics_choose_period_title" />

            <include layout="@layout/layout_month_choosing" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_statistics_element" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>