<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    tools:context=".ui.alarm.AlarmFragment">

    <TextView
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:text="@string/alarm_belongs_job_title" />

    <TextView
        android:id="@+id/tv_alarm_job"
        style="@style/TextSelectable"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_48"
        android:gravity="start|center_vertical"
        android:hint="@string/choose_placeholder"
        tools:text="Моя работа" />

    <TextView
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/alarm_belongs_schedule_title" />

    <TextView
        android:id="@+id/tv_alarm_schedule"
        style="@style/TextSelectable"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_48"
        android:gravity="start|center_vertical"
        android:hint="@string/choose_placeholder"
        tools:text="Мой график" />

    <TextView
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/alarm_belongs_shift_title" />

    <TextView
        android:id="@+id/tv_alarm_shift"
        style="@style/TextSelectable"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_48"
        android:gravity="start|center_vertical"
        android:hint="@string/choose_placeholder"
        tools:text="Дневная" />

    <TextView
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="Установить время" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_48"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_alarm_time"
            style="@style/TextSelectable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/spacing_4"
            android:layout_weight="0.35"
            android:gravity="center"
            android:textColor="@color/enabled_disabled_color"
            tools:text="00:00" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_weight="0.65">

            <CheckBox
                android:id="@+id/checkbox_is_alarm_active"
                style="@style/CheckBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Включить будильник" />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_alarm_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:textColor="@color/bright_gray_54"
        tools:text="Будильник сработает через 10 минут" />

    <TextView
        style="@style/TitlePrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="Напоминание" />

    <EditText
        android:id="@+id/et_alarm_label"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_48"
        android:hint="Отразится при срабатывании будильника"
        android:importantForAutofill="no"
        android:inputType="textCapSentences" />


</LinearLayout>